--- a/membership.css
+++ b/membership.css
@@ -54,10 +54,58 @@ body {
 
 #div__members-top-box {
     border: 2px solid firebrick;
+    width: 100%;
+}
+
+.div__members-content-flex-row {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    justify-content: center;
+}
 
+#sec__content-boxes--left {
+    border: 2px solid saddlebrown;
+    margin: 0px 7px 0px 0px;
+    width: 100%;
+    height: 450px;
+}
+
+#sec__content-boxes--middle {
+    border: 2px solid aqua;
+    margin: 0px 7px;
+    width: 100%;
+    height: 450px;
+}
+
+#sec__content-boxes--right {
+    border: 2px solid lawngreen;
+    margin: 0px 0px 0px 7px;
+    height: 450px;
+    width: 100%;
+}
+
+.sec__content--flex-column {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.div__link-box {
+    display: flex;
+    justify-content: center;
+    border: 2px solid darkolivegreen;
+    margin: 0px 0px 30px;
+    width: 85%;
+    height: 55px;
+}
+
+.a__links {
+    border: 1px dashed yellow;
+    font-size: 20px;
+    align-self: center;
 }
 
 footer {
