We are still continuing to format the top section of the members page.

--- a/membership.css
+++ b/membership.css
@@ -93,9 +93,57 @@ body {
     justify-content: space-between;
 }
 
+.sec__content--members-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid slateblue;
+    width: 100%;
+}
+
+.sec__content-headers-box {
+    border: 1px dashed olive;
+    width: 100%;
+    height: 80px;
+    text-align: center;
+}
+
+.sec__content-headers {
+    border: 1px dashed fuchsia;
+    font-size: 18px;
+}
+
+.sec__content-price-box {
+    border: 2px solid purple;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+}
+
+.img__dollar-sign-box {
+    border: 1px dashed lawngreen;
+
+}
+
+.img__dollar-sign {
+    border: 2px solid darkblue;
+
+}
+
+.p__content-header-price--large-box {
+    border: 2px solid chocolate;
+
+}
+
+.p__content-header-price--large {
+    display: inline;
+
+}
+
 .div__link-box {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     border: 2px solid darkolivegreen;
     margin: 0px 0px 30px;
     width: 85%;
