--- a/membership.css
+++ b/membership.css
@@ -214,12 +214,17 @@ body {
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 850px;
 }
 
 .div__content-boxes--flex-rows-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: 2px solid saddlebrown;
     margin: 0px;
     width: 100%;
+    justify-content: space-between;
 }
 
 .sec__membership-info--flex-col {
@@ -228,6 +233,26 @@ body {
     flex-wrap: nowrap;
     border: 2px solid grey;
     align-items: center;
+    width: 100%;
+}
+
+.sec__add-ons-info--flex-col {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    border: 2px solid grey;
+    align-items: center;
+    margin-bottom: 50px;
+    width: 100%;
+}
+
+.sec__fees-info--flex-col {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    border: 2px solid grey;
+    align-items: center;
+    margin-bottom: 80px;
 }
 
 .div__header-box {
@@ -248,7 +273,7 @@ body {
 
 .p__members-info--text {
     margin: 0px;
-    font-size: 16px;
+    font-size: 17px;
     text-align: center;
     padding: 0px 15px 0px;
 }
@@ -267,6 +292,9 @@ body {
     margin: 0px 0px 0px 7px;
     border: 2px solid purple;
 }
+
+
+
 
 footer {
     border: 3px solid white;
@@ -307,3 +335,9 @@ footer {
     text-align: center;
     padding-top: 2.5px;
 }
+
+
+/*We need to redo the classes for:
+    div__content-boxes--flex-rows-box
+   sec__membership-info--flex-col
+*/
