--- a/membership.css
+++ b/membership.css
@@ -214,7 +214,25 @@ body {
     margin: 0px 0px 30px;
     width: 90%;
     height: 50px;
+    overflow: hidden;
     background-color: #212121;
+}
+
+.div__link-box::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #273469, #1E2749); /* Initial gradient */
+    transform: scaleX(0); /* Initial scale to 0, making it invisible */
+    transform-origin: left;
+    transition: transform 0.65s ease-in-out; /* Add a transition effect */
+}
+
+.div__link-box:hover::before {
+    transform: scaleX(1); /* Scale it to 100% width on hover */
 }
 
 .a__links {
