--- a/membership.css
+++ b/membership.css
@@ -218,7 +218,7 @@ body {
     background-color: #212121;
 }
 
-.div__link-box::before {
+#div__link-box-left::before {
     content: "";
     position: absolute;
     top: 0;
@@ -231,10 +231,43 @@ body {
     transition: transform 0.65s ease-in-out; /* Add a transition effect */
 }
 
-.div__link-box:hover::before {
+#div__link-box-left:hover::before {
     transform: scaleX(1); /* Scale it to 100% width on hover */
 }
 
+#div__link-box-middle::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #1E2749, #081235); /* Initial gradient */
+    transform: scaleX(0); /* Initial scale to 0, making it invisible */
+    transform-origin: left;
+    transition: transform 0.65s ease-in-out; /* Add a transition effect */
+}
+
+#div__link-box-middle:hover::before {
+    transform: scaleX(1); /* Scale it to 100% width on hover */
+}
+
+#div__link-box-right::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #081235, #04091a); /* Initial gradient */
+    transform: scaleX(0); /* Initial scale to 0, making it invisible */
+    transform-origin: left;
+    transition: transform 0.65s ease-in-out; /* Add a transition effect */
+}
+
+#div__link-box-right:hover::before {
+    transform: scaleX(1); /* Scale it to 100% width on hover */
+}
 .a__links {
     font-size: 20px;
     align-self: center;
